# binny

./: .gitignore  CITATION.cff  LICENSE  LSST_SRD_Redshift_Distributions_and_Binning.ipynb  README.md  check.ipynb  check.py  logo.py  lsst_galaxy_sample.py  photoz_binning_demo.py  presets.py  pyproject.toml  smail_logo.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release-bump.yml
benchmarks/: generate_benchmarks_lsst.py  lsst_desc_specs.yaml  lsst_galaxy_sample.py  presets.py  reference_io.py
benchmarks/data/default__coarse/: lens_bins_Y1.npy  lens_bins_Y4.npy  lens_bins_Y7.npy  lens_nz_Y4.npy  lens_nz_Y7.npy  (+9 more)
docs/: binny.api.config.rst  binny.api.distributions.rst  binny.api.edges.rst  binny.api.grids.rst  binny.api.metrics.rst  binny.api.rst  binny.api.surveys.rst  binny.api.tomo.rst  binny.axes.bin_edges.rst  binny.axes.rst  binny.core.rst  binny.core.validators.rst  binny.io.rst  binny.rst  binny.samples.rst  binny.scales.rst  binny.surveys.lsst.rst  binny.surveys.rst  binny.utils.broadcasting.rst  binny.utils.rst  binny.utils.validators.rst  binny.ztomo.bin_similarity.rst  binny.ztomo.bin_stats.rst  binny.ztomo.distributions.rst  binny.ztomo.photoz.rst  binny.ztomo.rst  binny.ztomo.specz.rst  binny.ztomo.ztomo_utils.rst  citation.rst  conf.py  contributing.rst  development.rst  index.rst  installation.rst  overview.rst
docs/_static/: binny.css
docs/_templates/: pages_redirect.html
docs/api/: binny.api.rst  binny.nz.rst  binny.nz_tomo.bin_stats.rst  binny.nz_tomo.binning_core.rst  binny.nz_tomo.rst  binny.rst  binny.surveys.config_core.rst  binny.surveys.rst  binny.surveys.session_core.rst  binny.utils.pairwise_metrics.rst  binny.utils.rst  modules.rst
docs/examples/: basic_binning.rst  bin_combos.rst  bin_diagnostics.rst  bin_summaries.rst  comparing_schemes.rst  diagnostics.rst  index.rst  lf_nz_modelling.rst  nz_calibration.rst  nz_modelling.rst  photoz_bins.rst  photoz_tomography.rst  selections.rst  specz_bins.rst  specz_tomography.rst  survey_presets.rst  tomography.rst
docs/scripts/: fit_roman_smail.py  make_bin_diagnostics_gif.py  make_bin_pairs_selection_gif.py  make_bin_summary_gif.py  make_binny_logo_gif.py  make_binny_logo_leftotright.py  make_calib_gif.py  make_nz_model_gif.py  make_smail_gif.py  make_survey_gif.py  pz_uncertainty_mean_offset.py  pz_uncertainty_mean_scale.py  pz_uncertainty_outliers.py  pz_uncertainty_scatter.py  specz_uncertainty_catastrophic.py  specz_uncertainty_completeness.py  specz_uncertainty_scatter.py  tomo_bin_pair_sweep.py  tomo_equidist_vs_equipop.py  tomo_nbins.py  tomo_parent_to_bins.py  tomo_photoz_example_gif.py  tomo_photoz_hard_bins.py  tomo_specz_example_gif.py  tomo_specz_hard_bins.gif.py  tomo_window_func_product.py
docs/theory/: binning_schemes.rst  conventions.rst  diagnostics.rst  index.rst  notation.rst  parent_nz.rst  statistics.rst  tomography.rst  uncertainties.rst
logo/: logo.py  make_logo.py
main/: .buildinfo  citation.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  workflow.html
main/.doctrees/: citation.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  workflow.doctree
main/_sources/: citation.rst.txt  index.rst.txt  installation.rst.txt  workflow.rst.txt
main/_static/: binny.css
main/api/: binny.api.html  binny.api.nz_tomography.html  binny.axes.bin_edges.html  binny.axes.grids.html  binny.axes.html  binny.axes.mixed_edges.html  binny.correlations.bin_combo_filter.html  binny.correlations.filters.html  binny.correlations.html  binny.correlations.metrics.html  binny.correlations.scores.html  binny.correlations.topology.html  binny.html  binny.nz.calibration.html  binny.nz.html  binny.nz.models.html  binny.nz.registry.html  binny.nz_tomo.between_sample_metrics.html  binny.nz_tomo.bin_similarity.html  binny.nz_tomo.bin_stats.html  binny.nz_tomo.binning_core.html  binny.nz_tomo.html  binny.nz_tomo.nz_tomo_utils.html  binny.nz_tomo.photoz.html  binny.nz_tomo.specz.html  binny.surveys.config_utils.html  binny.surveys.configs.html  binny.surveys.html  binny.surveys.sky.html  binny.utils.broadcasting.html  binny.utils.html  binny.utils.io.html  binny.utils.metadata.html  binny.utils.normalization.html  binny.utils.pairwise_metrics.html  binny.utils.relations.html  binny.utils.types.html  binny.utils.validators.html  index.html  modules.html
main/examples/: bin_diagnostics.html  bin_summaries.html  index.html  nz_calibration.html  nz_modelling.html  photoz_bins.html  selections.html  specz_bins.html  survey_presets.html
main/theory/: bin_combos.html  conventions.html  diagnostics.html  index.html  parent_nz.html  statistics.html  tomography.html
src/binny/: __init__.py  bin_stats.py  binning.py  distributions.py  io.py  photoz.py  specz.py  tomo.py
src/binny.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_api_config.py  test_api_distributions.py  test_api_edges.py  test_api_grids.py  test_api_lsst_reference.py  test_api_metrics.py  test_api_nz_tomography.py  test_api_nz_tomography_examples.py  test_api_nz_tomography_lsst_reference.py  test_api_surveys.py  test_api_tomo.py  test_axes_bin_edges.py  test_axes_grids.py  test_axes_mixed_edges.py  test_axes_mixed_edges_invariances_fast.py  test_axes_mixed_edges_invariances_slow.py  test_core_validators.py  test_correlations_bin_combo_filter.py  test_correlations_filters.py  test_correlations_metrics.py  test_correlations_scores.py  test_correlations_topology.py  test_nz_calibration.py  test_nz_lf_dependent_nz.py  test_nz_models.py  test_nz_registry.py  test_nz_tomo_between_sample_metrics.py  test_nz_tomo_bin_similarity.py  test_nz_tomo_bin_stats.py  test_nz_tomo_bin_stats_center_invariance_fast.py  test_nz_tomo_bin_stats_center_invariance_slow.py  test_nz_tomo_bin_stats_invariances.py  test_nz_tomo_binning_core.py  test_nz_tomo_nz_tomo_utils.py  test_nz_tomo_photoz.py  test_nz_tomo_photoz_metadata.py  test_nz_tomo_specz.py  test_surveys_config_core.py  test_surveys_config_utils.py  (+20 more)
(+461 files in other folders)
