[project]
name = "binny"
version = "0.1.0"
description = "Flexible tomographic binning algorithms for cosmology."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nikolina Sarcevic", email = "nikolina.sarcevic@gmail.com" }]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "scipy",
  "tox",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
  "bump-my-version>=0.26",
]

"docs" = [
    "sphinx",
    "sphinx-design",
    "sphinx-multiversion",
    "furo",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
  "lsst_galaxy_sample.py",
  "presets.py",
  "LSST_SRD_Redshift_Distributions_and_Binning.ipynb",
  "updated_lsst_desc_parameters.yaml",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"


[tool.tox]
requires = ["tox>=4.22"]
envlist = [
  "docs",
  "docs-releases",
]


[tool.tox.env.docs]
description = "Build the HTML files for the current state using Sphinx"
extras = ["docs"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],
  [
    "sphinx-build",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
]

[tool.tox.env.docs-releases]
description = "Build the documentation for derivkit releases using Sphinx"
extras = ["docs"]
allowlist_externals = ["cp"]
commands = [
  [
    "sphinx-apidoc",
    "-o", "{tox_root}/docs",
    "{tox_root}/src/derivkit",
    "--separate",
    "-f",
  ],
  [
    "sphinx-multiversion",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "cp",
    "{tox_root}/docs/_templates/pages_redirect.html",
    "{tox_root}/docs/_build/html/index.html",
  ],
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[tool.bumpversion.files."pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
